apps/user-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
  labels:
    app: user-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: user-app
